暂存 多模型加载

--- a/src/Core/Localization/texts_en.json
+++ b/src/Core/Localization/texts_en.json
@@ -102,19 +102,16 @@
     "MappingFailed": "[MP RPCont] Failed to map remote player ID: {0}, Error: {1}",
     "NameTagComponentMissing": "[MP RPCont] PlayerNameTag component not added"
   },
-  "RemotePlayerFactory": {
-    "UnableToLoadResources": "[MP Prefab] Unable to load resources",
-    "PrefabProcessingError": "[MP Prefab] Collapse while processing object {0} Error Massage: {1}",
-    "RemoteEntityAddFailed": "[MP Prefab] Failed to add the RemoteEntity component to preform",
-    "ObjectTaggerAddFailed": "[MP Prefab] Failed to add the ObjectTagger component to preform",
-    "CL_HandholdAddFailed": "[MP Prefab] Failed to add the CL_Handhold component to preform",
-
-    "MaterialShaderInfo": "[MP Prefab] Material name: {0} Material shader name: {1}",
-    "ShaderNotFoundOnRenderer": "[MP Prefab] Shader not found: {0}, applied on renderer {1}",
-    "SpecializingTMPComponent": "[MP Prefab] Specializing TMP component: {0}",
-    "FontAssetNotFound": "[MP Prefab] Font asset named {0} not found!",
-    "ImplementOverlayViaShader": "[MP Prefab] Implementing Overlay via TMP Shader modification",
-    "UnableToLoadMaterial": "[MP Prefab] Unable to load material in bundle: {0}"
+  "RPFactoryManager": {
+    "FactoryAlreadyRegistered": "[MP RPFactoryMan] {0} already registered",
+    "FactoryRegistered": "[MP RPFactoryMan] {0} registered successfully",
+    "FactoryNotFound": "[MP RPFactoryMan] {0} not found",
+    "AlreadyInitialized": "[MP RPFactoryMan] already initialized",
+    "Initialized": "[MP RPFactoryMan] initialized",
+    "Reset": "[MP RPFactoryMan] reset",
+    "CannotDetermineFactory": "[MP RPFactoryMan] Cannot determine factory for cleanup, destroying directly",
+    "FactoryNotFoundCleanup": "[MP RPFactoryMan] The destruction factory {0} was not found, and the object was directly destroyed",
+    "DebugFactoryInfo": "[MP RPFactoryMan] factoryId: {0} PrefabName: {1} \n BundlePath: {2}"
   },
   "Patch": {
     "PlayerDeath": "[MP Patch] Player death,type: {0}",
