--- a/src/Core/Localization/texts_zh.json
+++ b/src/Core/Localization/texts_zh.json
@@ -91,30 +91,25 @@
     "AllPlayer": "名称: {0} Id: {1}",
     "PlayerDeath": "{0} 被 {1} 杀死"
   },
-  "RemotePlayerManager": {
-
-    "SlugcatPrefabNotFound": "[MP RPMan] 找不到Slugcat预制体",
+  "RPManager": {
     "RemotePlayerObjectNotFound": "[MP RPMan] 未找到远程映射对象 ID: {0}",
     "FactoryCreateObjectFailed": "[MP RPMan] 创建远程映射对象失败"
   },
-  "RemotePlayerContainer": {
+  "RPContainer": {
     "MappingSucceeded": "[MP RPCont] 远程玩家映射成功 ID: {0}",
     "MappingFailed": "[MP RPCont] 远程玩家映射失败 ID: {0}, 错误: {1}",
     "NameTagComponentMissing": "[MP RPCont] PlayerNameTag的组件未添加"
   },
-  "RemotePlayerFactory": {
-    "UnableToLoadResources": "[MP Prefab] 无法加载资源",
-    "PrefabProcessingError": "[MP Prefab] 处理对象 {0} 时崩溃: {1}",
-    "RemoteEntityAddFailed": "[MP Prefab] 预制体RemoteEntity组件添加失败, 我也不知道怎么办, 建议重启？",
-    "ObjectTaggerAddFailed": "[MP Prefab] 预制体ObjectTagger组件添加失败, 我也不知道怎么办, 建议重启？",
-    "CL_HandholdAddFailed": "[MP Prefab] 预制体CL_Handhold组件添加失败, 我也不知道怎么办, 建议重启？",
-
-    "MaterialShaderInfo": "[MP Prefab] 材质名: {0} 材质连接的shader名: {1}",
-    "ShaderNotFoundOnRenderer": "[MP Prefab] 未找到 Shader: {0},应用在渲染器 {1} 上",
-    "SpecializingTMPComponent": "[MP Prefab] 正在特化处理 TMP 组件: {0}",
-    "FontAssetNotFound": "[MP Prefab] 未找到名为 {0} 的字体资产！",
-    "ImplementOverlayViaShader": "[MP Prefab] 通过修改 TMP 的 Shader 的方式实现 Overlay",
-    "UnableToLoadMaterial": "[MP Prefab] 无法加载包内材质: {0}"
+  "RPFactoryManager": {
+    "FactoryAlreadyRegistered": "[MP RPFactoryMan] {0} 已经注册过",
+    "FactoryRegistered": "[MP RPFactoryMan] {0} 注册成功",
+    "FactoryNotFound": "[MP RPFactoryMan] {0} 未找到",
+    "AlreadyInitialized": "[MP RPFactoryMan] 已经初始化过了",
+    "Initialized": "[MP RPFactoryMan] 初始化完成",
+    "Reset": "[MP RPFactoryMan] 重置",
+    "CannotDetermineFactory": "[MP RPFactoryMan] 无法确定工厂用于清理,直接销毁对象",
+    "FactoryNotFoundCleanup": "[MP RPFactoryMan] 销毁工厂 {0} 未找到,直接销毁对象",
+    "DebugFactoryInfo": "[MP RPFactoryMan] 工厂Id: {0} 预制体名称: {1} \n 包路径: {2}"
   },
   "Patch": {
     "PlayerDeath": "[MP Patch] 玩家死亡,类型: {0}",
