--- a/src/Core/Util/Localization/texts_zh.json
+++ b/src/Core/Util/Localization/texts_zh.json
@@ -11,6 +11,7 @@
     "Destroy": "[MPCore] MultiplayerCore 已被销毁",
     "SceneLoadingCompleted": "[MPCore] 场景加载完成: {0}",
     "CommandConsoleNullAfterSceneLoad": "[MPCore] 场景加载后 CommandConsole 实例仍为 null, 无法注册命令.",
+    "PlayerDataMissing": "[MPCore] 玩家: {0} 未创建,正在请求数据已创建玩家",
     "CreatingLobby": "[MPCore] 正在创建大厅: {0}...",
     "JoiningLobby": "[MPCore] 正在加入大厅: {0}...",
     "DisconnectedAndCleaned": "[MPCore] 所有连接已断开, 远程玩家已清理.",
@@ -124,7 +125,7 @@
     "AssetBundleContent": "[MP RPBaseFactory] --- 开始输出 AssetBundle 内容清单: [{0}] ---",
     "AssetBundleEmpty": "[MP RPBaseFactory] 警告:该 AssetBundle 是空的！",
     "AssetBundleItem": "[MP RPBaseFactory] [资源清单] 路径: {0} | 类型: {1}",
-    "AssetBundleSummary": "[MP RPBaseFactory] --- 清单输出完毕，共计 {0} 个资源 ---"
+    "AssetBundleSummary": "[MP RPBaseFactory] --- 清单输出完毕,共计 {0} 个资源 ---"
   },
   "RPSlugcatFactory": {
     "SpecializingTMPComponent": "[MP RPSlugcatFactory] 正在特化处理 TMP 组件: {0}",
@@ -141,8 +142,12 @@
     "CoreInjectionFailed": "[MP Patch] 注入核心失败: {0}"
   },
   "MPPacketRouter": {
+    "RouteTableInitialized": "[MP PacketRouter] 路由表初始化完成, 注册路由数: {0}",
+    "ShowAllRouteTable": "包类型: {0} 函数名: {1}",
     "FailedToBind": "[MP PacketRouter] 不支持的参数: {0} Message: {1}",
-    "NoServiceFound": "[MP PacketRouter] 未找到以下包类型: {0} 对应的处理函数"
+    "NoServiceFound": "[MP PacketRouter] 未找到以下包类型: {0} 对应的处理函数",
+    "PacketTypeOutOfRange": "PacketType {0} 超出了 FastHandlers 数组范围 (0-{1})",
+    "PacketHandlerOverridden": "PacketType {0} 已经存在处理器 {1},将被 {2} 覆盖."
   },
   "MPMessageHandlers": {
     "SentInitData": "[MP PacketHandlers] 已向新玩家发送初始化数据"
