--- a/src/Core/Util/Localization/texts_en.json
+++ b/src/Core/Util/Localization/texts_en.json
@@ -1,153 +1,139 @@
 {
+  "CommandConsole": {
+    "AllPlayer": "Name: {0} Id: {1}",
+    "AlreadyInOnlineMode": "You are already in online mode, \nplease use the leave command to leave and then go online",
+    "CreateLobbyFailed": "Fail to create lobby",
+    "HostUsage": "Usage: host <room_name> [max_players]",
+    "JoinFormatError": "ForMat error \nUsage: join <lobby_id>",
+    "JoinLobbyFailed": "Fail to join lobby",
+    "JoinUsage": "Usage: join <lobby_id>",
+    "LobbyIdOutput": "Lobby Id: {0}",
+    "MultipleMatchingIds": "Found multiple matching IDs. Below is the corresponding list:\n{0}",
+    "NeedToBeOnline": "You need in online mode, \nplease use the host or join",
+    "PlayerDeath": "{0} died due to {1}",
+    "TargetIdNotFound": "Target ID not found. This command uses suffix matching.\nExample: Target ID: 76561198279116422 → tpto 6422.",
+    "WorldNotInitialized": "World not initialized yet. \nPlease wait for world initialization."
+  },
   "LocalPlayer": {
     "DataAcquisitionException": "[MP LP] Local player data acquisition exception.",
     "HandDataAcquisitionException": "[MP LP] Local hand data acquisition exception."
   },
   "MPCore": {
-    "Awake": "[MPCore] MultiplayerCore Awake",
-    "DuplicateInstanceDetected": "[MPCore] Duplicate instance detected, destroying the current one.",
+    "AllConnectionLog": "[MPCore] All connections SteamId: {0} connections Id: {1}",
     "AllManagersInitialized": "[MPCore] All managers initialized.",
-    "ManagerInitializationFailed": "[MPCore] Failed to initialize Manager: {0}",
-    "Destroy": "[MPCore] MultiplayerCore Destroy",
-    "SceneLoadingCompleted": "[MPCore] Scene loading completed: {0}",
+    "Awake": "[MPCore] MultiplayerCore Awake",
     "CommandConsoleNullAfterSceneLoad": "[MPCore] After scene loading, the CommandConsole instance is still null; cannot register commands.",
     "CreatingLobby": "[MPCore] Creating lobby: {0}...",
-    "JoiningLobby": "[MPCore] Joining lobby: {0}...",
+    "Destroy": "[MPCore] MultiplayerCore Destroy",
     "DisconnectedAndCleaned": "[MPCore] All connections have been disconnected, remote players have been cleaned up.",
-    "OutgoingConnectionLog": "[MPCore] Outgoing connections SteamId: {0} connections Id: {1}",
-    "AllConnectionLog": "[MPCore] All connections SteamId: {0} connections Id: {1}",
-    "PlayerJoinedLobby": "[MPCore] New player joined the lobby, Id: {0}",
     "EnteringLobby": "[MPCore] Joining the lobby Id: {0}",
-    "PlayerLeftLobby": "[MPCore] Player left the lobby Id: {0}",
-    "PlayerDisconnected": "[MPCore] Player disconnected Id: {0}",
-    "RequestedInitData": "[MPCore] Requested initialization data from the host.",
-    "SentInitData": "[MPCore] Initialization data has been sent to the new player.",
+    "JoiningLobby": "[MPCore] Joining lobby: {0}...",
     "LoadingWorld": "[MPCore] Loading world, seed: {0}",
-
-    "CreateExistingPlayer": "[MPCore] Create an existing player Id: {0}"
+    "ManagerInitializationFailed": "[MPCore] Failed to initialize Manager: {0}",
+    "OutgoingConnectionLog": "[MPCore] Outgoing connections SteamId: {0} connections Id: {1}",
+    "PlayerDataMissing": "[MPCore] Player: {0} has not been created. Requesting data to created player",
+    "PlayerDisconnected": "[MPCore] Player disconnected Id: {0}",
+    "PlayerJoinedLobby": "[MPCore] New player joined the lobby, Id: {0}",
+    "PlayerLeftLobby": "[MPCore] Player left the lobby Id: {0}",
+    "RequestedInitData": "[MPCore] Requested initialization data from the host.",
+    "SceneLoadingCompleted": "[MPCore] Scene loading completed: {0}"
   },
   "MPMain": {
     "Destroy": "[MPMain] MPMain (Launcher) has been destroyed."
   },
+  "MPMessageHandlers": {
+    "PrefabDoesNotExist": "[MP Handlers] Prefab: {0} does not exist",
+    "PrefabIsNotItem": "[MP Handlers] Prefab: {0} is not an item and cannot be put into inventory",
+    "SentInitData": "[MP Handlers] Initialization data has been sent to the new player."
+  },
+  "MPPacketRouter": {
+    "FailedToBind": "[MP Router] Failed to bind: {0} Message: {1}",
+    "NoServiceFound": "[MP Router] No service function found for the corresponding PacketType: {0}",
+    "PacketHandlerOverridden": "[MP Router] PacketType {0} already has handler {1}, will be overridden by {2}.",
+    "PacketTypeOutOfRange": "[MP Router] PacketType {0} exceeds FastHandlers array range (0-{1})",
+    "ShowAllRouteTable": "[MP Router] PacketType: {0} Handler: {1}"
+  },
   "MPSteamworks": {
-    "DuplicateInstanceDetected": "[MPSW] Duplicate instance detected, destroying the current one.",
-    "SteamworksInitFailed": "[MPSW] Failed to initialize Steamworks. Please check your Steam login status.",
-    "SteamworksInitSuccess": "[MPSW] Steamworks initialization succeeded. Player: {0} ID: {1}",
-    "SteamworksInitException": "[MPSW] Steamworks initialization exception: {0}",
     "AllConnectionsDisconnected": "[MPSW] All network connections have been disconnected.",
-    "StartedBroadcasting": "[MPSW] Started broadcasting data, current connections: {0}",
-    "SendingToConnection": "[MPSW] Sending data to connections. SteamId: {0} ConnectionId: {1}",
-    "BroadcastingException": "[MPSW] Broadcasting data exception: {0}",
-    "UnicastException": "[MPSW] Unicast data exception: {0} SteamId: {1}",
-    "MessageQueueException": "[MPSW] Message processing exception: {0}",
-    "PlayerDisconnectedCleaned": "[MPSW] Player disconnected, connection cleaned up. SteamId: {0}",
+    "AlreadyActiveConnected": "[MPSW] Already actively connected to the player. SteamId: {0} Connection state: {1}",
     "AlreadyConnected": "[MPSW] Already connected to player. SteamId: {0}",
-    "ConnectingToPlayer": "[MPSW] Connecting to player. SteamId: {0}",
-    "ConnectToPlayerException": "[MPSW] Exception while connecting to player: {0}",
-    "ConnectionTimeout": "[MPSW] Connection to player timed out. SteamId: {0}",
+    "AsyncTaskFailed": "[MPSW] Async task execution failed: {0}",
+    "BroadcastingException": "[MPSW] Broadcasting data exception: {0}",
     "ConnectSuccess": "[MPSW] Successfully connected to player. SteamId: {0}",
-    "SteamClientInvalid": "[MPSW] SteamClient is invalid. Please check your Steam login status.",
-    "CreateLobbyFailed": "[MPSW] Failed to create lobby",
-    "LobbyCreatedSuccess": "[MPSW] Lobby created successfully. Lobby ID: {0}",
-    "CreateLobbyException": "[MPSW] Create Lobby exception: {0}",
-    "JoinLobbySuccess": "[MPSW] Successfully joined lobby: {0}",
-    "NullLobbyName": "Unknown lobby",
-    "JoinLobbyException": "[MPSW] Join lobby exception: {0}",
-    "EnteredLobby": "[MPSW] Entered lobby. LobbyId: {0}",
+    "ConnectToPlayerException": "[MPSW] Exception while connecting to player: {0}",
     "ConnectedToLobbyPlayer": "[MPSW] Connected to player in the lobby: {0}({1})",
+    "ConnectingToPlayer": "[MPSW] Connecting to player. SteamId: {0}",
+    "ConnectionAttemptFailed": "[MPSW] The {0}th attempt to connect {1} failed.",
+    "ConnectionEeceiver": "[MPSW] Receiver waiting process starts <- {0}",
+    "ConnectionInitiator": "[MPSW] Initiator connection process started -> {0}",
+    "ConnectionProcessFailed": "[MPSW] Connection process completely failed, please check network connection or copy the log and submit it to developer's GitHub.",
+    "ConnectionTimeout": "[MPSW] Connection to player timed out. SteamId: {0}",
+    "CreateLobbyException": "[MPSW] Create Lobby exception: {0}",
+    "CreateLobbyFailed": "[MPSW] Failed to create lobby",
+    "DisconnectedDetails": "[MPSW] Disconnected details: {0}",
+    "EnteredLobby": "[MPSW] Entered lobby. LobbyId: {0}",
+    "HostChanged": "[MPSW] Host change: {0} -> {1}",
+    "JoinLobbyException": "[MPSW] Join lobby exception: {0}",
+    "JoinLobbySuccess": "[MPSW] Successfully joined lobby: {0}",
+    "LobbyCreatedSuccess": "[MPSW] Lobby created successfully. Lobby ID: {0}",
+    "LobbyIdChanged": "[MPSW] Lobby Id change: {0} -> {1}",
+    "MessageQueueException": "[MPSW] Message processing exception: {0}",
+    "NullLobbyName": "Unknown lobby",
+    "PlayerConnected": "[MPSW] The player has already connected. SteamId: {0} Connection Id: {1} Connection state: {2}",
+    "PlayerConnecting": "[MPSW] Player is connecting. SteamId: {0}",
+    "PlayerDisconnectedCleaned": "[MPSW] Player disconnected, connection cleaned up. SteamId: {0}",
+    "PlayerDisconnectedFromLobby": "[MPSW] Player disconnected from the lobby. SteamName: {0}",
     "PlayerJoinedRoom": "[MPSW] Player joined room. SteamName: {0}",
     "PlayerLeftRoom": "[MPSW] Player left the room. SteamName: {0}",
-    "PlayerDisconnectedFromLobby": "[MPSW] Player disconnected from the lobby. SteamName: {0}",
-    "LobbyIdChanged": "[MPSW] Lobby Id change: {0} -> {1}",
-    "HostChanged": "[MPSW] Host change: {0} -> {1}",
-    "PlayerConnecting": "[MPSW] Player is connecting. SteamId: {0}",
-    "PlayerConnected": "[MPSW] The player has already connected. SteamId: {0} Connection Id: {1} Connection state: {2}",
-    "DisconnectedDetails": "[MPSW] Disconnected details: {0}",
-    "AlreadyActiveConnected": "[MPSW] Already actively connected to the player. SteamId: {0} Connection state: {1}",
-    "AsyncTaskFailed": "[MPSW] Async task execution failed: {0}",
-
-    "SocketCreateException": "[MPSW] Create Socket exception: {0}",
-
-    "ConnectionAttemptFailed": "[MPSW] The {0}th attempt to connect {1} failed.",
-    "ConnectionInitiator": "[MPSW] Initiator connection process started -> {0}",
-    "ConnectionEeceiver": "[MPSW] Receiver waiting process starts <- {0}",
     "ReverseConnectionAttempt": "[MPSW] 10-second timeout: starting reverse attempt...",
-    "ConnectionProcessFailed": "[MPSW] Connection process completely failed, please check network connection or copy the log and submit it to developer's GitHub.",
-
-    "ConnectToHostFailed": "[MPSW] Connect to host failed",
-    "AttemptingToConnect": "[MPSW] Attempting to connect to host... (Attempt {0})"
+    "SendingToConnection": "[MPSW] Sending data to connections. SteamId: {0} ConnectionId: {1}",
+    "SocketCreateException": "[MPSW] Create Socket exception: {0}",
+    "StartedBroadcasting": "[MPSW] Started broadcasting data, current connections: {0}",
+    "SteamClientInvalid": "[MPSW] SteamClient is invalid. Please check your Steam login status.",
+    "SteamworksInitException": "[MPSW] Steamworks initialization exception: {0}",
+    "SteamworksInitFailed": "[MPSW] Failed to initialize Steamworks. Please check your Steam login status.",
+    "SteamworksInitSuccess": "[MPSW] Steamworks initialization succeeded. Player: {0} ID: {1}",
+    "UnicastException": "[MPSW] Unicast data exception: {0} SteamId: {1}"
   },
-
-  "CommandConsole": {
-    "AlreadyInOnlineMode": "You are already in online mode, \nplease use the leave command to leave and then go online",
-    "HostUsage": "Usage: host <room_name> [max_players]",
-    "CreateLobbyFailed": "Fail to create lobby",
-    "JoinUsage": "Usage: join <lobby_id>",
-    "JoinLobbyFailed": "Fail to join lobby",
-    "JoinFormatError": "ForMat error \nUsage: join <lobby_id>",
-    "NeedToBeOnline": "You need in online mode, \nplease use the host or join",
-    "WorldNotInitialized": "World not initialized yet. \nPlease wait for world initialization.",
-    "TargetIdNotFound": "Target ID not found. This command uses suffix matching.\nExample: Target ID: 76561198279116422 → tpto 6422.",
-    "MultipleMatchingIds": "Found multiple matching IDs. Below is the corresponding list:\n{0}",
-    "LobbyIdOutput": "Lobby Id: {0}",
-    "AllPlayer": "Name: {0} Id: {1}",
-    "PlayerDeath": "{0} died due to {1}"
+  "Patch": {
+    "CoreAlreadyInjected": "[MP Patch] MPCore already injected, skipping.",
+    "CoreInjectionFailed": "[MP Patch] Failed to inject MPCore: {0}",
+    "CoreInjectionSuccess": "[MP Patch] MPCore object successfully injected into SteamManager.",
+    "CoreInstanceExists": "[MP Patch] MPCore instance already exists. GameObjectName: {0}",
+    "PlayerDeath": "[MP Patch] Player death,type: {0}",
+    "PreparingToInjectCore": "[MP Patch] SteamManager.Awake called, preparing to inject core."
   },
-  "RPManager": {
-    "RemotePlayerObjectNotFound": "[MP RPMan] Remote player object not found. ID: {0}",
-    "FactoryCreateObjectFailed": "[MP RPMan] Failed to create the remote player object"
+  "RPBaseFactory": {
+    "CL_HandholdAddFailed": "[MP RPBaseFactory] Failed to add the CL_Handhold component to prefab",
+    "MaterialShaderInfo": "[MP RPBaseFactory] Material name: {0} Material shader name: {1}",
+    "ObjectTaggerAddFailed": "[MP RPBaseFactory] Failed to add the ObjectTagger component to prefab",
+    "PreFabProcessingError": "[MP RPBaseFactory] Exception Type: {0}\nMessage: {1}\nCall Stack : {2}",
+    "PrefabNotLoaded": "[MP RPBaseFactory] Prefab '{0}' not loaded",
+    "RemoteEntityAddFailed": "[MP RPBaseFactory] Failed to add the RemoteEntity component to prefab",
+    "ShaderNotFoundOnRenderer": "[MP RPBaseFactory] Shader not found: {0}, applied on renderer {1}",
+    "UnableToLoadResources": "[MP RPBaseFactory] Unable to load resources"
   },
   "RPContainer": {
-    "MappingSucceeded": "[MP RPCont] Remote player mapping succeeded ID: {0}",
     "MappingFailed": "[MP RPCont] Failed to map remote player ID: {0}, Error: {1}",
+    "MappingSucceeded": "[MP RPCont] Remote player mapping succeeded ID: {0}",
     "NameTagComponentMissing": "[MP RPCont] PlayerNameTag component not added"
   },
   "RPFactoryManager": {
-    "FactoryAlreadyRegistered": "[MP RPFactoryMan] {0} already registered",
-    "FactoryRegistered": "[MP RPFactoryMan] {0} registered successfully",
-    "FactoryNotFound": "[MP RPFactoryMan] {0} not found",
-    "AlreadyInitialized": "[MP RPFactoryMan] already initialized",
-    "Initialized": "[MP RPFactoryMan] initialized",
-    "Reset": "[MP RPFactoryMan] reset",
     "CannotDetermineFactory": "[MP RPFactoryMan] Cannot determine factory for cleanup, destroying directly",
+    "DebugFactoryInfo": "[MP RPFactoryMan] factoryId: {0} PrefabName: {1} \n BundlePath: {2}",
+    "FactoryAlreadyRegistered": "[MP RPFactoryMan] {0} already registered",
+    "FactoryNotFound": "[MP RPFactoryMan] {0} not found",
     "FactoryNotFoundCleanup": "[MP RPFactoryMan] The destruction factory {0} was not found, and the object was directly destroyed",
-    "DebugFactoryInfo": "[MP RPFactoryMan] factoryId: {0} PrefabName: {1} \n BundlePath: {2}"
+    "FactoryRegistered": "[MP RPFactoryMan] {0} registered successfully",
   },
-  "RPBaseFactory": {
-    "PrefabNotLoaded": "[MP RPBaseFactory] Prefab '{0}' not loaded",
-    "UnableToLoadResources": "[MP RPBaseFactory] Unable to load resources",
-    "PreFabProcessingError": "[MP RPBaseFactory] Exception Type: {0}\nMessage: {1}\nCall Stack : {2}",
-    "MaterialShaderInfo": "[MP RPBaseFactory] Material name: {0} Material shader name: {1}",
-    "ShaderNotFoundOnRenderer": "[MP RPBaseFactory] Shader not found: {0}, applied on renderer {1}",
-    "RemoteEntityAddFailed": "[MP RPBaseFactory] Failed to add the RemoteEntity component to prefab",
-    "ObjectTaggerAddFailed": "[MP RPBaseFactory] Failed to add the ObjectTagger component to prefab",
-    "CL_HandholdAddFailed": "[MP RPBaseFactory] Failed to add the CL_Handhold component to prefab",
-    "AssetBundleContent": "[MP RPBaseFactory] --- AssetBundle content list: [{0}] ---",
-    "AssetBundleEmpty": "[MP RPBaseFactory] Warning: This AssetBundle is empty!",
-    "AssetBundleItem": "[MP RPBaseFactory] [Asset List] Path: {0} | Type: {1}",
-    "AssetBundleSummary": "[MP RPBaseFactory] --- List output complete, total {0} resources ---"
+  "RPManager": {
+    "FactoryCreateObjectFailed": "[MP RPMan] Failed to create the remote player object",
+    "RemotePlayerObjectNotFound": "[MP RPMan] Remote player object not found. ID: {0}"
   },
   "RPSlugcatFactory": {
-    "SpecializingTMPComponent": "[MP RPSlugcatFactory] Specializing TMP component: {0}",
     "FontAssetNotFound": "[MP RPSlugcatFactory] Font asset named {0} not found!",
     "ImplementOverlayViaShader": "[MP RPSlugcatFactory] Implementing Overlay via TMP Shader modification",
+    "SpecializingTMPComponent": "[MP RPSlugcatFactory] Specializing TMP component: {0}",
     "UnableToLoadMaterial": "[MP RPSlugcatFactory] Unable to load material in bundle: {0}"
-  },
-  "Patch": {
-    "PlayerDeath": "[MP Patch] Player death,type: {0}",
-    "PreparingToInjectCore": "[MP Patch] SteamManager.Awake called, preparing to inject core.",
-    "CoreAlreadyInjected": "[MP Patch] MPCore already injected, skipping.",
-    "CoreInstanceExists": "[MP Patch] MPCore instance already exists. GameObjectName: {0}",
-    "CoreInjectionSuccess": "[MP Patch] MPCore object successfully injected into SteamManager.",
-    "CoreInjectionFailed": "[MP Patch] Failed to inject MPCore: {0}"
-  },
-  "MPPacketRouter": {
-    "FailedToBind": "[MP PacketRouter] Failed to bind: {0} Message: {1}",
-    "NoServiceFound": "[MP PacketRouter] No service function found for the corresponding PacketType: {0}",
-    "PacketTypeOutOfRange": "[MP PacketRouter] PacketType {0} exceeds FastHandlers array range (0-{1})",
-    "PacketHandlerOverridden": "[MP PacketRouter] PacketType {0} already has handler {1}, will be overridden by {2}."
-  },
-  "MPMessageHandlers": {
-
   }
 }
