--- a/src/Core/Util/Localization/texts_zh.json
+++ b/src/Core/Util/Localization/texts_zh.json
@@ -1,155 +1,139 @@
 {
+  "CommandConsole": {
+    "AllPlayer": "名称: {0} Id: {1}",
+    "AlreadyInOnlineMode": "您已处于在线模式, \n请使用 leave 命令离开后再进行联机",
+    "CreateLobbyFailed": "创建大厅失败",
+    "HostUsage": "用法: host <房间名称> [最大玩家数]",
+    "JoinFormatError": "格式错误\n用法: join <大厅ID>",
+    "JoinLobbyFailed": "加入大厅失败",
+    "JoinUsage": "用法: join <大厅ID>",
+    "LobbyIdOutput": "大厅ID: {0}",
+    "MultipleMatchingIds": "找到多个匹配的ID.以下是对应的列表:\n{0}",
+    "NeedToBeOnline": "您需要在在线模式下使用此命令, \n请先使用 host 或 join 命令",
+    "PlayerDeath": "{0} 被 {1} 杀死",
+    "TargetIdNotFound": "未找到目标ID.此命令使用后缀匹配.\n例如: 目标ID: 76561198279116422 → tpto 6422.",
+    "WorldNotInitialized": "世界尚未初始化完成, \n请等待世界初始化."
+  },
   "LocalPlayer": {
     "DataAcquisitionException": "[MP LP] 本地玩家数据获取异常.",
     "HandDataAcquisitionException": "[MP LP] 本地手部数据获取异常."
   },
   "MPCore": {
-    "Awake": "[MPCore] MultiplayerCore Awake",
-    "DuplicateInstanceDetected": "[MPCore] 检测到重复实例, 正在销毁当前实例.",
-    "AllManagersInitialized": "[MPCore] 所有管理器初始化完成",
-    "ManagerInitializationFailed": "[MPCore] 管理器初始化失败: {0}",
-    "Destroy": "[MPCore] MultiplayerCore 已被销毁",
-    "SceneLoadingCompleted": "[MPCore] 场景加载完成: {0}",
-    "CommandConsoleNullAfterSceneLoad": "[MPCore] 场景加载后 CommandConsole 实例仍为 null, 无法注册命令.",
-    "PlayerDataMissing": "[MPCore] 玩家: {0} 未创建,正在请求数据已创建玩家",
-    "CreatingLobby": "[MPCore] 正在创建大厅: {0}...",
-    "JoiningLobby": "[MPCore] 正在加入大厅: {0}...",
-    "DisconnectedAndCleaned": "[MPCore] 所有连接已断开, 远程玩家已清理.",
-    "OutgoingConnectionLog": "[MPCore] 出站连接 SteamId: {0} 连接Id: {1}",
     "AllConnectionLog": "[MPCore] 全部连接 SteamId: {0} 连接Id: {1}",
-    "PlayerJoinedLobby": "[MPCore] 玩家加入大厅 Id: {0}",
+    "AllManagersInitialized": "[MPCore] 所有管理器初始化完成",
+    "Awake": "[MPCore] MultiplayerCore Awake",
+    "CommandConsoleNullAfterSceneLoad": "[MPCore] 场景加载后 CommandConsole 实例仍为 null, 无法注册命令.",
+    "CreatingLobby": "[MPCore] 正在创建大厅: {0}...",
+    "Destroy": "[MPCore] MultiplayerCore 已被销毁",
+    "DisconnectedAndCleaned": "[MPCore] 所有连接已断开, 远程玩家已清理.",
     "EnteringLobby": "[MPCore] 正在加入大厅 Id: {0}",
-    "PlayerLeftLobby": "[MPCore] 玩家离开大厅 Id: {0}",
-    "PlayerDisconnected": "[MPCore] 玩家断连 Id: {0}",
-    "RequestedInitData": "[MPCore] 已向主机请求初始化数据",
-
+    "JoiningLobby": "[MPCore] 正在加入大厅: {0}...",
     "LoadingWorld": "[MPCore] 加载世界, 种子号: {0}",
-
-    "CreateExistingPlayer": "[MPCore] 创建已存在的玩家 Id: {0}"
+    "ManagerInitializationFailed": "[MPCore] 管理器初始化失败: {0}",
+    "OutgoingConnectionLog": "[MPCore] 出站连接 SteamId: {0} 连接Id: {1}",
+    "PlayerDataMissing": "[MPCore] 玩家: {0} 未创建,正在请求数据已创建玩家",
+    "PlayerDisconnected": "[MPCore] 玩家断连 Id: {0}",
+    "PlayerJoinedLobby": "[MPCore] 玩家加入大厅 Id: {0}",
+    "PlayerLeftLobby": "[MPCore] 玩家离开大厅 Id: {0}",
+    "RequestedInitData": "[MPCore] 已向主机请求初始化数据",
+    "SceneLoadingCompleted": "[MPCore] 场景加载完成: {0}"
   },
   "MPMain": {
     "Destroy": "[MPMain] MPMain (启动器) 已被销毁."
   },
+  "MPMessageHandlers": {
+    "PrefabDoesNotExist": "[MP Handlers] 预制体: {0} 不存在",
+    "PrefabIsNotItem": "[MP Handlers] 预制体: {0} 不是可拾取物,不能放入背包",
+    "SentInitData": "[MP Handlers] 已向新玩家发送初始化数据"
+  },
+  "MPPacketRouter": {
+    "FailedToBind": "[MP Router] 不支持的参数: {0} Message: {1}",
+    "NoServiceFound": "[MP Router] 未找到以下包类型: {0} 对应的处理函数",
+    "PacketHandlerOverridden": "[MP Router] PacketType {0} 已经存在处理器 {1},将被 {2} 覆盖.",
+    "PacketTypeOutOfRange": "[MP Router] PacketType {0} 超出了 FastHandlers 数组范围 (0-{1})",
+    "ShowAllRouteTable": "[MP Router] 包类型: {0} 函数名: {1}"
+  },
   "MPSteamworks": {
-    "DuplicateInstanceDetected": "[MPSW] 检测到重复实例, 正在销毁当前实例.",
-    "SteamworksInitFailed": "[MPSW] Steamworks初始化失败, 请检查Steam在线情况",
-    "SteamworksInitSuccess": "[MPSW] Steamworks初始化成功 玩家: {0} ID: {1}",
-    "SteamworksInitException": "[MPSW] Steamworks初始化异常: {0}",
     "AllConnectionsDisconnected": "[MPSW] 所有网络连接已断开",
-    "StartedBroadcasting": "[MPSW] 开始广播数据, 当前连接数: {0}",
-    "SendingToConnection": "[MPSW] 广播数据, 当前连接: SteamId: {0} 连接Id: {1}",
-    "BroadcastingException": "[MPSW] 广播数据异常: {0}",
-    "UnicastException": "[MPSW] 单播数据异常: {0} SteamId: {1}",
-    "MessageQueueException": "[MPSW] 消息处理异常: {0}",
-    "PlayerDisconnectedCleaned": "[MPSW] 玩家断开, 已清理连接. SteamId: {0}",
+    "AlreadyActiveConnected": "[MPSW] 已经主动连接玩家. SteamId: {0} 连接状态: {1}",
     "AlreadyConnected": "[MPSW] 已经连接过玩家. SteamId: {0}",
-    "ConnectingToPlayer": "[MPSW] 正在主动连接玩家. SteamId: {0}",
-    "ConnectToPlayerException": "[MPSW] 连接玩家异常: {0}",
-    "ConnectionTimeout": "[MPSW] 连接玩家超时. SteamId: {0}",
+    "AsyncTaskFailed": "[MPSW] 异步任务执行失败: {0}",
+    "BroadcastingException": "[MPSW] 广播数据异常: {0}",
     "ConnectSuccess": "[MPSW] 连接玩家成功. SteamId: {0}",
-    "SteamClientInvalid": "[MPSW] SteamClient 无效, 请检查Steam在线情况",
-    "CreateLobbyFailed": "[MPSW] 创建大厅失败",
-    "LobbyCreatedSuccess": "[MPSW] 大厅创建成功, ID: {0}",
-    "CreateLobbyException": "[MPSW] 创建大厅异常: {0}",
-    "JoinLobbySuccess": "[MPSW] 加入大厅成功: {0}",
-    "NullLobbyName": "未知大厅",
-    "JoinLobbyException": "[MPSW] 加入大厅异常: {0}",
-    "EnteredLobby": "[MPSW] 进入大厅. 大厅Id: {0}",
+    "ConnectToPlayerException": "[MPSW] 连接玩家异常: {0}",
     "ConnectedToLobbyPlayer": "[MPSW] 连接已在大厅玩家: {0}({1})",
+    "ConnectingToPlayer": "[MPSW] 正在主动连接玩家. SteamId: {0}",
+    "ConnectionAttemptFailed": "[MPSW] 第{0}次尝试连接{1}失败",
+    "ConnectionEeceiver": "[MPSW] 接收者等待流程开始 <- {0}",
+    "ConnectionInitiator": "[MPSW] 发起者连接流程开始 -> {0}",
+    "ConnectionProcessFailed": "[MPSW] 连接流程彻底失败, 请检测网络连接或复制日志向开发者github提交",
+    "ConnectionTimeout": "[MPSW] 连接玩家超时. SteamId: {0}",
+    "CreateLobbyException": "[MPSW] 创建大厅异常: {0}",
+    "CreateLobbyFailed": "[MPSW] 创建大厅失败",
+    "DisconnectedDetails": "[MPSW] 连接断开详情: {0}",
+    "EnteredLobby": "[MPSW] 进入大厅. 大厅Id: {0}",
+    "HostChanged": "[MPSW] 主机变更: {0} -> {1}",
+    "JoinLobbyException": "[MPSW] 加入大厅异常: {0}",
+    "JoinLobbySuccess": "[MPSW] 加入大厅成功: {0}",
+    "LobbyCreatedSuccess": "[MPSW] 大厅创建成功, ID: {0}",
+    "LobbyIdChanged": "[MPSW] 大厅Id变更: {0} -> {1}",
+    "MessageQueueException": "[MPSW] 消息处理异常: {0}",
+    "NullLobbyName": "未知大厅",
+    "PlayerConnected": "[MPSW] 玩家已经接入. SteamId: {0} 连接Id: {1} 连接状态: {2}",
+    "PlayerConnecting": "[MPSW] 玩家正在接入. SteamId: {0}",
+    "PlayerDisconnectedCleaned": "[MPSW] 玩家断开, 已清理连接. SteamId: {0}",
+    "PlayerDisconnectedFromLobby": "[MPSW] 玩家断开大厅连接. SteamName: {0}",
     "PlayerJoinedRoom": "[MPSW] 玩家加入大厅. SteamName: {0}",
     "PlayerLeftRoom": "[MPSW] 玩家离开大厅. SteamName: {0}",
-    "PlayerDisconnectedFromLobby": "[MPSW] 玩家断开大厅连接. SteamName: {0}",
-    "LobbyIdChanged": "[MPSW] 大厅Id变更: {0} -> {1}",
-    "HostChanged": "[MPSW] 主机变更: {0} -> {1}",
-    "PlayerConnecting": "[MPSW] 玩家正在接入. SteamId: {0}",
-    "PlayerConnected": "[MPSW] 玩家已经接入. SteamId: {0} 连接Id: {1} 连接状态: {2}",
-    "DisconnectedDetails": "[MPSW] 连接断开详情: {0}",
-    "AlreadyActiveConnected": "[MPSW] 已经主动连接玩家. SteamId: {0} 连接状态: {1}",
-    "AsyncTaskFailed": "[MPSW] 异步任务执行失败: {0}",
-
-    "SocketCreateException": "[MPSW] 创建Socket失败: {0}",
-
-    "ConnectionAttemptFailed": "[MPSW] 第{0}次尝试连接{1}失败",
-    "ConnectionInitiator": "[MPSW] 发起者连接流程开始 -> {0}",
-    "ConnectionEeceiver": "[MPSW] 接收者等待流程开始 <- {0}",
     "ReverseConnectionAttempt": "[MPSW] 10秒超时, 开始反向尝试...",
-    "ConnectionProcessFailed": "[MPSW] 连接流程彻底失败, 请检测网络连接或复制日志向开发者github提交",
-
-    "ConnectToHostFailed": "[MPSW] 连接主机失败",
-    "AttemptingToConnect": "[MPSW] 正在尝试连接主机... (第 {0} 次)"
+    "SendingToConnection": "[MPSW] 广播数据, 当前连接: SteamId: {0} 连接Id: {1}",
+    "SocketCreateException": "[MPSW] 创建Socket失败: {0}",
+    "StartedBroadcasting": "[MPSW] 开始广播数据, 当前连接数: {0}",
+    "SteamClientInvalid": "[MPSW] SteamClient 无效, 请检查Steam在线情况",
+    "SteamworksInitException": "[MPSW] Steamworks初始化异常: {0}",
+    "SteamworksInitFailed": "[MPSW] Steamworks初始化失败, 请检查Steam在线情况",
+    "SteamworksInitSuccess": "[MPSW] Steamworks初始化成功 玩家: {0} ID: {1}",
+    "UnicastException": "[MPSW] 单播数据异常: {0} SteamId: {1}"
   },
-  "CommandConsole": {
-    "AlreadyInOnlineMode": "您已处于在线模式, \n请使用 leave 命令离开后再进行联机",
-    "HostUsage": "用法: host <房间名称> [最大玩家数]",
-    "CreateLobbyFailed": "创建大厅失败",
-    "JoinUsage": "用法: join <大厅ID>",
-    "JoinLobbyFailed": "加入大厅失败",
-    "JoinFormatError": "格式错误\n用法: join <大厅ID>",
-    "NeedToBeOnline": "您需要在在线模式下使用此命令, \n请先使用 host 或 join 命令",
-    "WorldNotInitialized": "世界尚未初始化完成, \n请等待世界初始化.",
-    "TargetIdNotFound": "未找到目标ID.此命令使用后缀匹配.\n例如: 目标ID: 76561198279116422 → tpto 6422.",
-    "MultipleMatchingIds": "找到多个匹配的ID.以下是对应的列表:\n{0}",
-    "LobbyIdOutput": "大厅ID: {0}",
-    "AllPlayer": "名称: {0} Id: {1}",
-    "PlayerDeath": "{0} 被 {1} 杀死"
+  "Patch": {
+    "CoreAlreadyInjected": "[MP Patch] Core已经注入过,跳过",
+    "CoreInjectionFailed": "[MP Patch] 注入核心失败: {0}",
+    "CoreInjectionSuccess": "[MP Patch] MPCore 对象已成功注入 SteamManager",
+    "CoreInstanceExists": "[MP Patch] 已存在核心实例: {0}",
+    "PlayerDeath": "[MP Patch] 玩家死亡,类型: {0}",
+    "PreparingToInjectCore": "[MP Patch] SteamManager.Awake 调用,准备注入MPCore"
   },
-  "RPManager": {
-    "RemotePlayerObjectNotFound": "[MP RPMan] 未找到远程映射对象 ID: {0}",
-    "FactoryCreateObjectFailed": "[MP RPMan] 创建远程映射对象失败"
+  "RPBaseFactory": {
+    "CL_HandholdAddFailed": "[MP RPBaseFactory] 预制体CL_Handhold组件添加失败",
+    "MaterialShaderInfo": "[MP RPBaseFactory] 材质名: {0} 材质连接的shader名: {1}",
+    "ObjectTaggerAddFailed": "[MP RPBaseFactory] 预制体ObjectTagger组件添加失败",
+    "PreFabProcessingError": "[MP RPBaseFactory] 异常类型: {0}\n消息: {1}\n调用堆栈: {2}",
+    "PrefabNotLoaded": "[MP RPBaseFactory] 预制体 '{0}' 未加载",
+    "RemoteEntityAddFailed": "[MP RPBaseFactory] 预制体RemoteEntity组件添加失败",
+    "ShaderNotFoundOnRenderer": "[MP RPBaseFactory] 未找到 Shader: {0},应用在渲染器 {1} 上",
+    "UnableToLoadResources": "[MP RPBaseFactory] 无法加载资源"
   },
   "RPContainer": {
-    "MappingSucceeded": "[MP RPCont] 远程玩家映射成功 ID: {0}",
     "MappingFailed": "[MP RPCont] 远程玩家映射失败 ID: {0}, 错误: {1}",
+    "MappingSucceeded": "[MP RPCont] 远程玩家映射成功 ID: {0}",
     "NameTagComponentMissing": "[MP RPCont] PlayerNameTag的组件未添加"
   },
   "RPFactoryManager": {
-    "FactoryAlreadyRegistered": "[MP RPFactoryMan] {0} 已经注册过",
-    "FactoryRegistered": "[MP RPFactoryMan] {0} 注册成功",
-    "FactoryNotFound": "[MP RPFactoryMan] {0} 未找到",
-    "AlreadyInitialized": "[MP RPFactoryMan] 已经初始化过了",
-    "Initialized": "[MP RPFactoryMan] 初始化完成",
-    "Reset": "[MP RPFactoryMan] 重置",
     "CannotDetermineFactory": "[MP RPFactoryMan] 无法确定工厂用于清理,直接销毁对象",
+    "DebugFactoryInfo": "[MP RPFactoryMan] 工厂Id: {0} 预制体名称: {1} \n 包路径: {2}",
+    "FactoryAlreadyRegistered": "[MP RPFactoryMan] {0} 已经注册过",
+    "FactoryNotFound": "[MP RPFactoryMan] {0} 未找到",
     "FactoryNotFoundCleanup": "[MP RPFactoryMan] 销毁工厂 {0} 未找到,直接销毁对象",
-    "DebugFactoryInfo": "[MP RPFactoryMan] 工厂Id: {0} 预制体名称: {1} \n 包路径: {2}"
+    "FactoryRegistered": "[MP RPFactoryMan] {0} 注册成功",
   },
-  "RPBaseFactory": {
-    "PrefabNotLoaded": "[MP RPBaseFactory] 预制体 '{0}' 未加载",
-    "UnableToLoadResources": "[MP RPBaseFactory] 无法加载资源",
-    "PreFabProcessingError": "[MP RPBaseFactory] 异常类型: {0}\n消息: {1}\n调用堆栈: {2}",
-    "MaterialShaderInfo": "[MP RPBaseFactory] 材质名: {0} 材质连接的shader名: {1}",
-    "ShaderNotFoundOnRenderer": "[MP RPBaseFactory] 未找到 Shader: {0},应用在渲染器 {1} 上",
-    "RemoteEntityAddFailed": "[MP RPBaseFactory] 预制体RemoteEntity组件添加失败",
-    "ObjectTaggerAddFailed": "[MP RPBaseFactory] 预制体ObjectTagger组件添加失败",
-    "CL_HandholdAddFailed": "[MP RPBaseFactory] 预制体CL_Handhold组件添加失败",
-    "AssetBundleContent": "[MP RPBaseFactory] --- 开始输出 AssetBundle 内容清单: [{0}] ---",
-    "AssetBundleEmpty": "[MP RPBaseFactory] 警告:该 AssetBundle 是空的！",
-    "AssetBundleItem": "[MP RPBaseFactory] [资源清单] 路径: {0} | 类型: {1}",
-    "AssetBundleSummary": "[MP RPBaseFactory] --- 清单输出完毕,共计 {0} 个资源 ---"
+  "RPManager": {
+    "FactoryCreateObjectFailed": "[MP RPMan] 创建远程映射对象失败",
+    "RemotePlayerObjectNotFound": "[MP RPMan] 未找到远程映射对象 ID: {0}"
   },
   "RPSlugcatFactory": {
-    "SpecializingTMPComponent": "[MP RPSlugcatFactory] 正在特化处理 TMP 组件: {0}",
     "FontAssetNotFound": "[MP RPSlugcatFactory] 未找到名为 {0} 的字体资产！",
     "ImplementOverlayViaShader": "[MP RPSlugcatFactory] 通过修改 TMP 的 Shader 的方式实现 Overlay",
+    "SpecializingTMPComponent": "[MP RPSlugcatFactory] 正在特化处理 TMP 组件: {0}",
     "UnableToLoadMaterial": "[MP RPSlugcatFactory] 无法加载包内材质: {0}"
-  },
-  "Patch": {
-    "PlayerDeath": "[MP Patch] 玩家死亡,类型: {0}",
-    "PreparingToInjectCore": "[MP Patch] SteamManager.Awake 调用,准备注入MPCore",
-    "CoreAlreadyInjected": "[MP Patch] Core已经注入过,跳过",
-    "CoreInstanceExists": "[MP Patch] 已存在核心实例: {0}",
-    "CoreInjectionSuccess": "[MP Patch] MPCore 对象已成功注入 SteamManager",
-    "CoreInjectionFailed": "[MP Patch] 注入核心失败: {0}"
-  },
-  "MPPacketRouter": {
-    "RouteTableInitialized": "[MP PacketRouter] 路由表初始化完成, 注册路由数: {0}",
-    "ShowAllRouteTable": "[MP PacketRouter] 包类型: {0} 函数名: {1}",
-    "FailedToBind": "[MP PacketRouter] 不支持的参数: {0} Message: {1}",
-    "NoServiceFound": "[MP PacketRouter] 未找到以下包类型: {0} 对应的处理函数",
-    "PacketTypeOutOfRange": "PacketType {0} 超出了 FastHandlers 数组范围 (0-{1})",
-    "PacketHandlerOverridden": "PacketType {0} 已经存在处理器 {1},将被 {2} 覆盖."
-  },
-  "MPMessageHandlers": {
-    "SentInitData": "[MP PacketHandlers] 已向新玩家发送初始化数据"
   }
 }
