--- a/src/Core/Util/Localization/texts_zh.json
+++ b/src/Core/Util/Localization/texts_zh.json
@@ -48,6 +48,7 @@
   },
   "MPPacketRouter": {
     "FailedToBind": "[MP Router] 不支持的参数: {0} Message: {1}",
+    "HandlerException": "[MP Router] 包类型: {0} 处理数据异常: {1}",
     "NoServiceFound": "[MP Router] 未找到以下包类型: {0} 对应的处理函数",
     "PacketHandlerOverridden": "[MP Router] PacketType {0} 已经存在处理器 {1},将被 {2} 覆盖.",
     "PacketTypeOutOfRange": "[MP Router] PacketType {0} 超出了 FastHandlers 数组范围 (0-{1})",
